# ironcscript-ide

./: .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini
src/: main.cpp
src/core/: Editor.cpp  Editor.h  Engine.cpp  Engine.h  Terminal.cpp  Terminal.h
src/platform/: K210Support.cpp  K210Support.h  Platform.cpp  Platform.h
src/ui/: FileBrowser.cpp  FileBrowser.h  MainWindow.cpp  MainWindow.h  ProjectManager.cpp  ProjectManager.h
